manifests/namespace.yaml
## For repeatability, here is the namespace for gitlab
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
