manifests/scaler-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: scaler-test
spec:
  containers:
    - name: hog
      image: nginx
      resources:
        requests:
          cpu: "500m"
          memory: "512Mi"
        limits:
          cpu: "1000m"
          memory: "1024Mi"
